--- a/file.html
+++ b/file.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Got Beer?</title>
-  <link rel="stylesheet" href="apiProj.css" media="none" onload="if(media!='all')media='all'">
+  <link rel="stylesheet" href="file.css" media="none" onload="if(media!='all')media='all'">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
